tdf#157613 make sure surface is not a null pointer

Change-Id: I8e3c1be3f05f7ccc1f3ba00093cd71a564e5ae9e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157848
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Tested-by: Patrick Luby <plubius@neooffice.org>
(cherry picked from commit bacdae0d6b0cec4de39812496f6ffafe04629411)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157871
Tested-by: Jenkins